Support building tests using JDK 17